Implement api refresh token
- Update api documentation
- Update code from Care Interchange
- Implement api registration (WIP)
